@@ -45,6 +45,9 @@ tasks {
   }
 
   val testStableSemconv by registering(Test::class) {
+    jvmArgs("-Dotel.instrumentation.couchbase.experimental-span-attributes=true")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
     jvmArgs("-Dotel.semconv-stability.opt-in=database")
   }
 
